# gpt4docstrings

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  docstrings_generators.md  gpt4docstrings.md  index.md  reference.md  requirements.txt  usage.md  use_as_cli.md  use_as_hook.md  use_cli.md  utils.md
example/: example.py
src/: pruebas.py
src/gpt4docstrings/: __init__.py  __main__.py  ascii_title.py  cli.py  config.py  docstring.py  docstrings_generator.py  exceptions.py  generate_docstrings.py  generate_docstrings_legacy.py  utils.py  visit.py
src/gpt4docstrings/docstrings_generators/: __init__.py  base.py  chatgpt_generator.py  docstring.py  dummy_generator.py  openai_chatgpt.py
src/gpt4docstrings/docstrings_generators/utils/: decorators.py  parsers.py  prompts.py
src/gpt4docstrings/docstrings_translators/: __init__.py  base.py  chatgpt_translator.py
src/gpt4docstrings/prompts/generation/: chatgpt.py
src/gpt4docstrings/prompts/translation/: chatgpt.py
src/gpt4docstrings/utils/: decorators.py  helpers.py  parsers.py
tests/: __init__.py  conftest.py  test_find_filenames.py  test_generated_docstrings.py  test_parsers.py
tests/resources/: module_1.py
tests/resources/package_1/: module_2.py
