[tool.poetry]
name = "gpt4docstrings"
version = "0.1.4"
description = "gpt4docstrings"
authors = ["Miguel Otero Pedrido <miguel.otero.pedrido.1993@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MichaelisTrofficus/gpt4docstrings"
repository = "https://github.com/MichaelisTrofficus/gpt4docstrings"
documentation = "https://gpt4docstrings.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/MichaelisTrofficus/gpt4docstrings/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
redbaron = "^0.9.2"
openai = "^0.27.8"
docformatter = "^1.7.3"
pytest-mock = "^3.11.1"
tabulate = "^0.9.0"
colorama = "^0.4.6"
langchain = "^0.0.311"
toml = "^0.10.2"
asyncio = "^3.4.3"
aiofiles = "^23.2.1"
reorder-python-imports = "^3.12.0"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
sphinx = "6.2.1"
sphinxcontrib-napoleon = "^0.7"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
nox = "^2023.4.22"
nox-poetry = "^1.0.2"


[tool.poetry.scripts]
gpt4docstrings = "gpt4docstrings.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gpt4docstrings", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
